[package]
name = "gmres"
version = "1.0.0"
authors = ["Ricard Lado"]
description = "A sparse linear system solver using the GMRES iterative method."
categories = ["mathematics", "science"]
keywords = ["math", "linear", "algebra", "sparse", "GMRES"]
license = "MIT"
repository = "https://github.com/rlado/GMRES"
readme = "README.md"
edition = "2021"
exclude = [".github/",]

[lib]
name = "gmres"
path = "src/lib.rs"

[dependencies]
rsparse = "1.0.0"
